# etno-segmenter

./: CMakeLists.txt
app/: app.cpp  main.cpp  marsyas_app.cpp
cmake/: FindDependencies.cmake
marsystems/: buffer.cpp  buffer.h  buffer.hpp  chromaticentropy.cpp  chromaticentropy.hpp  etno_muse_classifier.cpp  etno_muse_classifier.hpp  linear_trend.cpp  linear_trend.hpp  mfcc.cpp  mfcc.hpp  vampsink.cpp  vampsink.hpp
modules/: 4hz_modulation.hpp  cepstral_features.hpp  classification.cpp  classification.hpp  energy.hpp  energy_gate.hpp  entropy.hpp  mel_spectrum.hpp  mfcc.hpp  module.hpp  pipeline.cpp  pipeline.hpp  real_cepstrum.hpp  resampler.hpp  spectrum.hpp  statistics.hpp
plugin/: entry.cpp  marsyas_plugin.cpp  marsyas_plugin.hpp  plugin.cpp  plugin.hpp
